Fix overflows on homepage for very small phones

--- a/src/components/pages/HomePage/ShortInfo/ShortInfo.module.css
+++ b/src/components/pages/HomePage/ShortInfo/ShortInfo.module.css
@@ -128,3 +128,9 @@
     font-size: 2rem;
   }
 }
+
+@media (max-height: 550px) and (orientation: portrait) {
+  .block {
+    height: 250vh;
+  }
+}
