--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
 
 :root {
   font-family: "Work Sans", -apple-system, Frutiger, "Frutiger Linotype",
@@ -23,7 +23,10 @@ h2 {
   font-weight: 400;
 }
 
-h3, h4, h5, h6 {
+h3,
+h4,
+h5,
+h6 {
   font-size: 1.25rem;
   line-height: 1.625rem;
   font-weight: 600;
